# pyode

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyode/: __init__.py  pyode.py
src/pyode/explicit/: condition_checks.py  estimation.py  initialization.py  interpolation.py  step_size.py  tableaux.py  tools.py
tests/: test_functions.py  test_pyode.py
