[tool.poetry]
name = "pyode"
version = "0.1.0"
description = "Solvers for sordinary differential equations"
authors = ["Vivi Andasari"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
